--- a/Quiz.css
+++ b/Quiz.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background: #FFF4EC;
+    background: #ffffff;
     padding: 50px 0;
     margin: 0 auto;
     display: flex;
@@ -126,17 +126,17 @@ header img {
     font-weight: 600;
     padding: 1rem 6rem;
     text-align: center;
-    border: 0.1rem solid #FFD989;
+    border: 0.1rem solid #8884c3;
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
     color: #3B2921;
-    background-color: #FFD989;
+    background-color: #8884c3;
     border-radius: 37px;
 }
 
 #begin-quiz:hover {
         cursor: pointer;
-        background-color: #FFCD64;
+        background-color: #2E0260;
         color: #fbfbfb;
         transform: none;
         transition: transform 150ms;
@@ -152,19 +152,19 @@ header img {
     width: 500px;
     height: 5rem;
     text-align: center;
-    border: 0.1rem solid #FFD989;
+    border: 0.1rem solid #8884c3;
     margin:auto;
     margin-bottom: 2rem;
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
     color: #3B2921;
-    background-color: #FFD989;
+    background-color: #8884c3;
     border-radius: 37px;
 }
 
 .choices:hover {
     cursor: pointer;
-    background-color: #FFCD64;
+    background-color: #2E0260;
     color: #fbfbfb;
     transform: none;
     transition: transform 150ms;
@@ -177,22 +177,22 @@ header img {
     width: 200px;
     height: 45px;
     text-align: center;
-    border: 0.1rem solid #FFD989;
+    border: 0.1rem solid #8884c3;
     margin-bottom: 1rem;
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
     color: #3B2921;
-    background-color: #FFD989;
+    background-color: #8884c3;
     border-radius: 37px;
 }
 
 .share-button {
-    background-color:#FFD989;
+    background-color:#8884c3;
 }
 
 #back-to-home:hover,.share-button:hover {
-    background-color:#FFCD64;
-    border-color: #FFCD64;
+    background-color:#2E0260;
+    border-color: #2E0260;
     color: #fbfbfb;
 }
 
@@ -355,18 +355,18 @@ header img {
         padding: 8px;
         width: 180px;
         text-align: center;
-        border: 0.1rem solid #FFD989;
+        border: 0.1rem solid #8884c3;
         text-decoration: none;
         font-family: 'Roboto', sans-serif;
         color: #3B2921;
-        background-color: #FFD989;
+        background-color: #8884c3;
         border-radius: 37px;
         margin-top: 50px;
     }
 
     #begin-quiz:hover {
         cursor: pointer;
-        background-color: #FFCD64;
+        background-color: #2E0260;
         color: #fbfbfb;
         transform: none;
         transition: none;
@@ -386,20 +386,20 @@ header img {
         width: 320px;
         height: 50px;
         text-align: center;
-        border: 0.1rem solid #FFD989;
+        border: 0.1rem solid #8884c3;
         margin:auto;
         margin-bottom: 15px;
         text-decoration: none;
         font-family: 'Roboto', sans-serif;
         color: #3B2921;
-        background-color: #FFD989;
-        border-color: #FFD989;
+        background-color: #8884c3;
+        border-color: #8884c3;
         border-radius: 37px;
      }
 
      .choices:hover {
         cursor: pointer;
-        background-color: #FFCD64;
+        background-color: #2E0260;
         color: #fbfbfb;
         transform: none;
         transition: none;
@@ -411,17 +411,17 @@ header img {
         width: 150px;
         height: 40px;
         text-align: center;
-        border: 0.1rem solid #FFD989;
+        border: 0.1rem solid #8884c3;
         margin-bottom: 1rem;
         text-decoration: none;
         font-family: 'Roboto', sans-serif;
         color: #3B2921;
-        background-color: #FFD989;
+        background-color: #3124e4;
         border-radius: 37px;
     }
     
     .share-button {
-        background-color:#FFD989;
+        background-color:#8884c3;
     }    
     
     /*Add margin between the buttons */
