--- a/Quiz.css
+++ b/Quiz.css
@@ -248,7 +248,7 @@ header img {
     } 
 
     body {
-        background: #FFF4EC;
+        background: #ffffff;
         padding: 40px 0;
         margin: 0 auto;
         display: flex;
