--- a/Quiz.css
+++ b/Quiz.css
@@ -416,7 +416,7 @@ header img {
         text-decoration: none;
         font-family: 'Roboto', sans-serif;
         color: #3B2921;
-        background-color: #3124e4;
+        background-color: #8884c3;
         border-radius: 37px;
     }
     
